--- a/cart.html
+++ b/cart.html
@@ -83,7 +83,7 @@
                 </li>
 
 
-								<li class="carrito" ng-style="{'background-color':1 == 1 ?  MasterInfo[0].BackColor: MasterInfo[0].BackColor}"><a  href="cart.html">
+								<li class="carrito" ng-style="{'background-color':1 == 1 ?  MasterInfo[0].BackColor: MasterInfo[0].BackColor}"><a  href="shipping-address2.html">
 									<i class="fas fa-cart-plus"></i> My Cart
 									<span class="badge badge-cart "> {{myCart.length}}</span>
 								</a></li>
