--- a/shipping-address2.html
+++ b/shipping-address2.html
@@ -314,7 +314,7 @@
 													</div>
 													<div class="row justify-content-end">
 														<div class="col-md-3">
-															<a class="btn btn-secondary btn-green btn-block " style="color:white">Add new Credit Card </a>
+															<a ng-click="SaveCreditCard();" class="btn btn-secondary btn-green btn-block " style="color:white">Save Credit Card </a>
 														</div>
 													</div>
 
@@ -391,7 +391,7 @@
 															</div>
 															<div class="row justify-content-end">
 																<div class="col-md-3">
-																	<a class="btn btn-secondary btn-green btn-block " style="color:white">Add new shipping address </a>
+																	<a ng-click="SaveShippingAddress();" class="btn btn-secondary btn-green btn-block " style="color:white">Save Shipping address </a>
 																</div>
 															</div>
 
