--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a ng-click="CloseSession();" class="dropdown-item" href="#" style="color:#5A6268;">Logout</a>
+                    <a  class="dropdown-item" href="your-order.html" style="color:#5A6268;">Your Orders</a>
                   </div>
                 </li>
 
