--- a/your-order.html
+++ b/your-order.html
@@ -172,21 +172,20 @@
 						<table class="table">
 							<thead>
 
-								<th colspan="2">Product</th>
-								<th class="text-center">Quantity</th>
-								<th class="cart_item_tprice text-center">Total</th>
+								<th class="text-center">Ship To</th>
+								<th class="cart_item_tprice text-center">Order Date</th>
+								<th class="text-center">Total</th>
 								<th class="text-center">Actions</th>
 
 							</thead>
 							<tbody>
-								<tr ng-repeat="ProductCardsItem in myCart">
-									<td class="cart_item_img"><img style="width:50px; height:50px" ng-src="{{ProductCardsItem.CATIMAGE}}" /></td>
-									<td>{{ProductCardsItem.NUM}}</td>
+								<tr>
+									<td>Miami yyy</td>
 									<td class="text-center">
-									1
+									05/12/2018
 									</td>
 
-									<td class="cart_item_tprice text-center">{{ProductCardsItem.PRICE * ProductCardsItem.QTY | currency }}</td>
+									<td class="cart_item_tprice text-center">$ 222.35</td>
 	<td class="text-center"> <a href="order-details.html">Order details</a></td>
 								</tr>
 							</tbody>
